@@ -9,7 +9,7 @@ from matplotlib.patches import Rectangle, CirclePolygon, Ellipse
 from matplotlib.text import Annotation
 
 fig = figure()
-ax = fig.add_subplot(111, autoscale_on=False, xlim=(-1,5), ylim=(-1,5))
+ax = fig.add_subplot(111, autoscale_on=False, xlim=(-1,5), ylim=(-3,5))
 
 rect = Rectangle((0.5, 0.5), 1, 3, alpha=0.3)
 ax.add_patch(rect)
@@ -29,8 +29,8 @@ ax.add_artist(b)
 c = Annotation(rect, 'C: rect', loc=('center', 'center'), color='blue')
 ax.add_artist(c)
 
-d = Annotation(ax, 'D: axes', loc=('inside right', 'inside bottom'),
-               color='red')
+d = Annotation(ax, 'bottom corner', loc=('inside right', 'inside bottom'),
+               color='red', autopad=40, lineprops=dict(lw=2, color='red', shrink=4))
 ax.add_artist(d)
 
 e = Annotation(ax, 'E: an axes title', loc=('center', 'outside top'),
@@ -41,7 +41,10 @@ f = Annotation(fig, 'F: a figure title', loc=('center', 'inside top'),
                autopad=10, size=16, color='green')
 ax.add_artist(f)
 
-g = Annotation(line, 'G: localmax', loc=(1/4., 1), padx=0, pady=3,
-               ha='left', va='bottom', color='purple', size=18)
+g = Annotation(line, 'localmax', loc=(2.25, 1), padx=20, pady=80, 
+               color='black', size=18,
+               lineprops=dict(lw=2, color='k', shrink=5., xalign='center'))
 ax.add_artist(g)
+
+fig.savefig('annotation_demo')
 show()
